--- a/Phase2/GameCentre/app/src/main/res/values/styles.xml
+++ b/Phase2/GameCentre/app/src/main/res/values/styles.xml
@@ -3,14 +3,14 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:background">@color/ButtonBlue</item>
+        <item name="colorPrimary">@color/FoxYellow</item>
+        <item name="colorPrimaryDark">@color/FoxOrange</item>
+        <item name="colorAccent">@color/FoxBrown</item>
+        <item name="android:background">@color/FoxBlue</item>
 
     </style>
 
-    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style name="PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
