--- a/Phase2/GameCentre/app/src/main/res/layout/activity_choose_dimension.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_choose_dimension.xml
@@ -2,16 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fall2018.csc2017.GameCentre.ChooseDimensionActivity">
+    tools:context="fall2018.csc2017.GameCentre.ChooseDimensionActivity"
+    android:background="@drawable/background">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Choose Dimension less than 10"
+        android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:textSize="20dp"
+        android:textSize="25sp"
         android:layout_above="@+id/EditDimension"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/FoxOrange"
         android:id="@+id/dimensionInstructions"/>
     <EditText
         android:layout_width="match_parent"
@@ -19,15 +21,17 @@
         android:id="@+id/EditDimension"
         android:layout_centerInParent="true"
         android:layout_margin="30dp"
+        android:textSize="20sp"
         android:inputType="text"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Choose Maximum Undo Turns"
+        android:textStyle="bold"
         android:layout_centerHorizontal="true"
-        android:textSize="20dp"
-        android:textColor="@color/colorPrimary"
+        android:textSize="25sp"
+        android:textColor="@color/FoxOrange"
         android:layout_below="@id/EditDimension"
         android:id="@+id/undoInstructions"/>
     <EditText
@@ -37,6 +41,7 @@
         android:layout_below="@id/undoInstructions"
         android:layout_centerInParent="true"
         android:layout_margin="30dp"
+        android:textSize="20sp"
         android:inputType="text"/>
 
     <Button
@@ -46,8 +51,9 @@
         android:layout_below="@id/editUndo"
         android:layout_centerHorizontal="true"
         android:onClick="submitInput"
-        style="@style/AppTheme"
+        android:background="@color/FoxYellow"
         android:text="Submit"
-        android:textColor="@color/colorPrimary" />
+        android:textSize="20sp"
+         />
 
 </RelativeLayout>
