--- a/Phase2/GameCentre/app/src/main/res/layout/activity_login.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
+
 
     <EditText
         android:id="@+id/username"
@@ -36,26 +38,28 @@
 
     <Button
         android:id="@+id/login"
-        style="@style/AppTheme"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="8dp"
         android:text="Login"
+        android:textSize="15sp"
+        android:background="@color/FoxYellow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/IDPassword" />
 
     <Button
         android:id="@+id/registerbutton"
-        style="@style/AppTheme"
-        android:layout_width="wrap_content"
+        android:background="@color/FoxYellow"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:text="Register"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login" />
