--- a/Phase2/GameCentre/app/src/main/res/layout/activity_main.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="fall2018.csc2017.GameCentre.SlidingTiles.SlidingGameActivity">
+    tools:context="fall2018.csc2017.GameCentre.SlidingTiles.SlidingGameActivity"
+    android:background="@drawable/background">
 
 
     <LinearLayout
@@ -13,18 +14,20 @@
         android:orientation="horizontal">
 
         <Button
-            style="@style/AppTheme"
             android:id="@+id/undoButton"
             android:layout_width="201dp"
             android:layout_height="wrap_content"
-            android:text="Undo" />
+            android:text="Undo"
+            android:background="@color/FoxYellow"
+            />
 
         <Button
-            style="@style/AppTheme"
             android:id="@+id/SaveButton"
             android:layout_width="210dp"
             android:layout_height="wrap_content"
-            android:text="Save" />
+            android:text="Save"
+            android:background="@color/FoxYellow"
+            />
     </LinearLayout>
 
     <fall2018.csc2017.GameCentre.GestureDetectGridViews.GestureDetectGridViewShortPress xmlns:android="http://schemas.android.com/apk/res/android"
