--- a/Phase2/GameCentre/app/src/main/res/layout/activity_simon.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_simon.xml
@@ -11,14 +11,17 @@
         android:orientation="horizontal"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:weightSum="3">
+        android:weightSum="3"
+        android:background="@drawable/background">
 
         <Button
             android:id="@+id/undoButton"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Redo Pattern" />
+            android:text="Redo Pattern"
+            android:layout_marginRight="30dp"
+            android:background="@color/FoxYellow"/>
 
 
         <Button
@@ -26,6 +29,7 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/FoxYellow"
             android:text="Save Game" />
 
 
