--- a/Phase2/GameCentre/app/src/main/res/layout/activity_simon_starting.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_simon_starting.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fall2018.csc2017.GameCentre.Simon.SimonStartingActivity">
+    tools:context="fall2018.csc2017.GameCentre.Simon.SimonStartingActivity"
+    android:background="@drawable/background" >
 
     <TextView
         android:id="@+id/GameText"
@@ -13,6 +14,7 @@
         android:layout_centerVertical="true"
         android:gravity="center"
         android:text="Welcome To Simon \n A Memory Game where you must click the tiles in the correct order!"
+        android:textSize="20sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:layout_marginBottom="20dp"/>
 
@@ -23,21 +25,21 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/GameText">
         <Button
-            style="@style/AppTheme"
             android:id="@+id/NewGameButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="New Game"
+            android:background="@color/FoxYellow"
             android:layout_marginBottom="10dp"/>
 
         <Button
-            style="@style/AppTheme"
             android:id="@+id/LoadButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Load Saved Game"
             android:layout_weight="1"
+            android:background="@color/FoxYellow"
             android:layout_marginBottom="10dp"/>
 
     </LinearLayout>
