--- a/Phase2/GameCentre/app/src/main/res/layout/menu_of_scoreboards.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/menu_of_scoreboards.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Score.GameScoreboardActivity">
+    tools:context=".Score.GameScoreboardActivity"
+    android:background="@drawable/background">
 
 
     <TextView
@@ -16,7 +17,8 @@
         android:text="@string/scoreboard"
         android:layout_marginTop="20dp"
         android:textSize="40dp"
-
+        android:textStyle="bold"
+        android:textColor="@color/Black"
 
         />
 
@@ -29,6 +31,8 @@
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         android:text="@string/please_select_the_scoreboard_you_want_to_see"
+        android:textColor="@color/Black"
+
 
         />
     <LinearLayout
@@ -40,7 +44,6 @@
         android:layout_centerVertical="true"
         >
         <Button
-            style="@style/AppTheme"
             android:id="@+id/MyScoreboardLabel"
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
@@ -48,10 +51,10 @@
             android:layout_marginTop="60dp"
             android:layout_below="@id/InstructionsLabel"
             android:text="@string/my_scoreboard"
-            android:layout_weight="1"            />
+            android:layout_weight="1"
+            android:background="@color/FoxYellow"/>
 
         <Button
-            style="@style/AppTheme"
             android:id="@+id/SlidingTilesScoreboardLabel"
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
@@ -60,10 +63,10 @@
             android:layout_marginTop="30dp"
             android:text="Sliding Tiles"
             android:layout_weight="1"
+            android:background="@color/FoxYellow"
             />
 
         <Button
-            style="@style/AppTheme"
             android:id="@+id/SimonScoreboardLabel"
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
@@ -72,11 +75,11 @@
             android:layout_marginTop="30dp"
             android:text="Simon"
             android:layout_weight="1"
+            android:background="@color/FoxYellow"
 
             />
 
         <Button
-            style="@style/AppTheme"
             android:id="@+id/MinesweeperScoreboard"
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
@@ -85,12 +88,12 @@
             android:layout_marginTop="30dp"
             android:text="Minesweeper"
             android:layout_weight="1"
+            android:background="@color/FoxYellow"
             />
 
     </LinearLayout>
 
     <Button
-        style="@style/AppTheme"
         android:id="@+id/MainMenuButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -100,5 +103,6 @@
         android:layout_marginBottom="20dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:background="@color/FoxYellow"
         />
 </RelativeLayout>
