--- a/Phase2/GameCentre/app/src/main/res/layout/scoreboard_of_all_user_games.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/scoreboard_of_all_user_games.xml
@@ -32,6 +32,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
         android:paddingLeft="10dp"
+        android:background="@color/FoxYellow"
         android:paddingRight="10dp"/>
 
     <GridLayout
