--- a/Phase2/GameCentre/app/src/main/res/layout/simon_main.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/simon_main.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="fall2018.csc2017.GameCentre.Simon.SimonGameActivity">
+    tools:context="fall2018.csc2017.GameCentre.Simon.SimonGameActivity"
+    android:background="@drawable/background">
     <LinearLayout
         android:layout_width="428dp"
         android:layout_height="wrap_content"
@@ -12,26 +13,23 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:weightSum="3"
-        android:background="@drawable/background">
+        >
 
         <Button
             android:id="@+id/undoButton"
             android:layout_weight="1"
-            android:layout_width="wrap_content"
+            android:layout_width="201dp"
             android:layout_height="wrap_content"
             android:text="Redo Pattern"
-            android:layout_marginRight="30dp"
             android:background="@color/FoxYellow"/>
-
 
         <Button
             android:id="@+id/saveButton"
             android:layout_weight="1"
-            android:layout_width="wrap_content"
+            android:layout_width="201dp"
             android:layout_height="wrap_content"
             android:background="@color/FoxYellow"
             android:text="Save Game" />
-
 
     </LinearLayout>
 
