--- a/Phase2/GameCentre/app/src/main/res/layout/choose_complexity_minesweeper.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/choose_complexity_minesweeper.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
 
 
@@ -38,6 +39,7 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="8dp"
         android:text="Start"
+        android:background="@color/FoxYellow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner2" />
