fixed minor simon bug, improved xml layouts

--- a/Phase2/GameCentre/app/src/main/res/layout/gamelauncheractivity.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/gamelauncheractivity.xml
@@ -87,6 +87,8 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:background="@color/FoxYellow"
+        android:textSize="15dp"
+
         />
 
 
