--- a/Phase2/GameCentre/app/src/main/res/layout/sliding_starting_.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/sliding_starting_.xml
@@ -48,11 +48,11 @@
 
         <Button
             android:id="@+id/ChooseTilePicture"
-            style="@style/AppTheme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
+            android:background="@color/FoxYellow"
             android:text="Choose Tile Picture" />
 
 
