--- a/Phase2/GameCentre/app/src/main/res/layout/activity_sweeper_starting.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/activity_sweeper_starting.xml
@@ -10,13 +10,14 @@
         android:id="@+id/GameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:text="Welcome To MineSweeper \n A game where you flag mines."
+        android:text="Welcome To MineSweeper \nA game where you flag mines."
         android:textStyle="bold"
         android:textSize="20sp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:layout_marginBottom="20dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
