--- a/Phase2/GameCentre/app/src/main/res/layout/post_game_score_screen.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/post_game_score_screen.xml
@@ -57,31 +57,32 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
          />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="20dp"
+        android:orientation="vertical"
+        >
+        <Button
+            android:background="@color/FoxYellow"
+            android:id="@+id/NewGameButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/HighScoreLabel"
+            android:layout_centerVertical="true"
+            android:text="New Game"
+            android:layout_marginBottom="20dp"
+            />
+        <Button
+            android:background="@color/FoxYellow"
+            android:id="@+id/MainMenuButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/back_to_main_menu"
+            android:layout_centerVertical="true"
+            />
+    </LinearLayout>
 
-    <Button
-        android:background="@color/FoxYellow"
-        android:id="@+id/NewGameButton"
-        android:layout_width="227dp"
-        android:layout_height="69dp"
-        android:layout_below="@+id/HighScoreLabel"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="85dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="115dp"
-        android:text="New Game" />
-    <Button
-        android:background="@color/FoxYellow"
-        android:id="@+id/MainMenuButton"
-        android:layout_width="227dp"
-        android:layout_height="69dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/back_to_main_menu"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-         />
 </RelativeLayout>
