--- a/Phase2/GameCentre/app/src/main/res/layout/scoreboard_per_game.xml
+++ b/Phase2/GameCentre/app/src/main/res/layout/scoreboard_per_game.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Score.GameScoreboardActivity"
+    android:layout_marginRight="40dp"
+    android:layout_marginLeft="40dp"
     >
 
     <Button
@@ -30,7 +32,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginBottom="50dp"
         android:text="Sliding Tiles Scoreboard"
-        android:textSize="20dp"/>
+        android:textSize="40dp"/>
 
         <GridLayout
             android:layout_width="match_parent"
@@ -49,6 +51,8 @@
                 android:id="@+id/usernameText"
                 android:layout_column="0"
                 android:layout_gravity="left"
+                android:textSize="16dp"
+
                 />
 
             <TextView
@@ -57,7 +61,8 @@
                 android:layout_height="wrap_content"
                 android:text="HighScore per User"
                 android:layout_column="1"
-                android:layout_gravity="right"/>
+                android:layout_gravity="right"
+                android:textSize="16dp"/>
         </GridLayout>
 
 
